--- a/index.html
+++ b/index.html
@@ -48,17 +48,13 @@
                 <div class="question-sect">
                     <h2 id="question"></h2>
                     <ul class="choices-sect">
-                        <li class="choices"><button id="answer1" type="button" class="btns">
-                                Answer 1
+                        <li class="choices"><button id="answer1" type="button" class="btns ansBtn">
                             </button></li>
-                        <li class="choices"><button id="answer2" type="button" class="btns">
-                                Answer 2
+                        <li class="choices"><button id="answer2" type="button" class="btns ansBtn">
                             </button></li>
-                        <li class="choices"><button id="answer3" type="button" class="btns">
-                                Answer 3
+                        <li class="choices"><button id="answer3" type="button" class="btns ansBtn">
                             </button></li>
-                        <li class="choices"><button id="answer4" type="button" class="btns">
-                                Answer 4
+                        <li class="choices"><button id="answer4" type="button" class="btns ansBtn">
                             </button></li>
                     </ul>
                 </div>
