--- a/index.html
+++ b/index.html
@@ -48,17 +48,21 @@
                 <div class="question-sect">
                     <h2 id="question"></h2>
                     <ul class="choices-sect">
-                        <li class="choices"><button id="answer1" type="button" class="btns ansBtn">
+                        <li class="choices"><button id="answer1" value="0" type="button" class="btns ansBtn">
                             </button></li>
-                        <li class="choices"><button id="answer2" type="button" class="btns ansBtn">
+                        <li class="choices"><button id="answer2" value="1" type="button" class="btns ansBtn">
                             </button></li>
-                        <li class="choices"><button id="answer3" type="button" class="btns ansBtn">
+                        <li class="choices"><button id="answer3" value="2" type="button" class="btns ansBtn">
                             </button></li>
-                        <li class="choices"><button id="answer4" type="button" class="btns ansBtn">
+                        <li class="choices"><button id="answer4" value="3" type="button" class="btns ansBtn">
                             </button></li>
                     </ul>
                 </div>
             </section>
+            <!-- Final Score Section -->
+            <div class="final">
+                
+            </div>
         </section>
     </div>
 
