added score section

--- a/index.html
+++ b/index.html
@@ -59,9 +59,13 @@
                     </ul>
                 </div>
             </section>
-            <!-- Final Score Section -->
-            <div class="final">
-                
+        </section>
+        <!-- Final Score Section -->
+        <section id="final">
+            <div class="final-score">
+                <h2>Congratulations!</h2>
+                <p class="score-result"></p>
+                <p class="record-name">Enter your name to record it</p>
             </div>
         </section>
     </div>
